--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <section id="about">
             <h2>About</h2>
-            <p>This is a simple single-page application built with HTML, CSS, and JavaScript.</p>
+            <p>This is a simple single-page application built with HTML, CSS, and JavaScript.2</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
