--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,46 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Single Page Application</h1>
+    <header class="site-header">
+        <div class="container header-inner">
+            <h1 class="site-title">Hashara's Blog</h1>
+            <nav class="main-nav">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
     </header>
-    <main>
-        <section id="about">
-            <h2>About</h2>
-            <p>This is a simple single-page application built with HTML, CSS, and JavaScript.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Feel free to reach out!</p>
-        </section>
+
+    <main class="container site-main">
+        <div class="content">
+            <section id="posts" class="posts">
+                <!-- Posts will be injected by JavaScript -->
+            </section>
+        </div>
+
+        <aside class="sidebar">
+            <div class="widget">
+                <h3>About Me</h3>
+                <p>I'm a computer engineering student who writes about web development and projects.</p>
+            </div>
+            <div class="widget">
+                <h3>Categories</h3>
+                <ul>
+                    <li>Web</li>
+                    <li>Projects</li>
+                    <li>Tutorials</li>
+                </ul>
+            </div>
+        </aside>
     </main>
-    <footer>
-        <p>&copy; 2023 My Single Page Application</p>
+
+    <footer class="site-footer">
+        <div class="container">
+            <p>&copy; 2026 Hashara Vidusanka</p>
+        </div>
     </footer>
+
     <script src="js/main.js"></script>
 </body>
 </html>
